[package]
name = "hello_world_stm32l4_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = { version = "0.6.13", features = ["device"] }
panic-halt = "0.2.0"
nb = "1.0.0"
stm32l4xx-hal = { version = "0.7.1", features = ["rt", "stm32l432"] }

cortex-m-rtic = "1.0.0"
systick-monotonic = "1.0.0"

defmt = "0.3.2"
defmt-bbq = "0.1.0"

[profile.release]
opt-level = "s"
lto = true
